; ModuleID = '/home/carl/AnghaBench/tengine/modules/ngx_http_tfs_module/extr_ngx_http_tfs_meta_server_message.c_ngx_http_tfs_meta_server_parse_message.c'
source_filename = "/home/carl/AnghaBench/tengine/modules/ngx_http_tfs_module/extr_ngx_http_tfs_meta_server_message.c_ngx_http_tfs_meta_server_parse_message.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_11__ = type { i32, %struct.TYPE_10__ }
%struct.TYPE_10__ = type { %struct.TYPE_9__ }
%struct.TYPE_9__ = type { i32 }

@NGX_ERROR = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ngx_http_tfs_meta_server_parse_message(%struct.TYPE_11__* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.TYPE_11__*, align 8
  %4 = alloca i32, align 4
  store %struct.TYPE_11__* %0, %struct.TYPE_11__** %3, align 8
  %5 = load %struct.TYPE_11__*, %struct.TYPE_11__** %3, align 8
  %6 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %5, i32 0, i32 1
  %7 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %6, i32 0, i32 0
  %8 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  store i32 %9, i32* %4, align 4
  %10 = load i32, i32* %4, align 4
  switch i32 %10, label %44 [
    i32 141, label %11
    i32 140, label %11
    i32 134, label %11
    i32 137, label %11
    i32 136, label %11
    i32 133, label %14
    i32 139, label %26
    i32 138, label %26
    i32 135, label %29
    i32 132, label %32
  ]

11:                                               ; preds = %1, %1, %1, %1, %1
  %12 = load %struct.TYPE_11__*, %struct.TYPE_11__** %3, align 8
  %13 = call i32 @ngx_http_tfs_parse_action_message(%struct.TYPE_11__* %12)
  store i32 %13, i32* %2, align 4
  br label %46

14:                                               ; preds = %1
  %15 = load %struct.TYPE_11__*, %struct.TYPE_11__** %3, align 8
  %16 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 4
  switch i32 %17, label %24 [
    i32 131, label %18
    i32 130, label %21
  ]

18:                                               ; preds = %14
  %19 = load %struct.TYPE_11__*, %struct.TYPE_11__** %3, align 8
  %20 = call i32 @ngx_http_tfs_parse_read_meta_message(%struct.TYPE_11__* %19)
  store i32 %20, i32* %2, align 4
  br label %46

21:                                               ; preds = %14
  %22 = load %struct.TYPE_11__*, %struct.TYPE_11__** %3, align 8
  %23 = call i32 @ngx_http_tfs_parse_action_message(%struct.TYPE_11__* %22)
  store i32 %23, i32* %2, align 4
  br label %46

24:                                               ; preds = %14
  %25 = load i32, i32* @NGX_ERROR, align 4
  store i32 %25, i32* %2, align 4
  br label %46

26:                                               ; preds = %1, %1
  %27 = load %struct.TYPE_11__*, %struct.TYPE_11__** %3, align 8
  %28 = call i32 @ngx_http_tfs_parse_ls_message(%struct.TYPE_11__* %27)
  store i32 %28, i32* %2, align 4
  br label %46

29:                                               ; preds = %1
  %30 = load %struct.TYPE_11__*, %struct.TYPE_11__** %3, align 8
  %31 = call i32 @ngx_http_tfs_parse_read_meta_message(%struct.TYPE_11__* %30)
  store i32 %31, i32* %2, align 4
  br label %46

32:                                               ; preds = %1
  %33 = load %struct.TYPE_11__*, %struct.TYPE_11__** %3, align 8
  %34 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %33, i32 0, i32 0
  %35 = load i32, i32* %34, align 4
  switch i32 %35, label %42 [
    i32 129, label %36
    i32 128, label %39
  ]

36:                                               ; preds = %32
  %37 = load %struct.TYPE_11__*, %struct.TYPE_11__** %3, align 8
  %38 = call i32 @ngx_http_tfs_parse_read_meta_message(%struct.TYPE_11__* %37)
  store i32 %38, i32* %2, align 4
  br label %46

39:                                               ; preds = %32
  %40 = load %struct.TYPE_11__*, %struct.TYPE_11__** %3, align 8
  %41 = call i32 @ngx_http_tfs_parse_write_meta_message(%struct.TYPE_11__* %40)
  store i32 %41, i32* %2, align 4
  br label %46

42:                                               ; preds = %32
  %43 = load i32, i32* @NGX_ERROR, align 4
  store i32 %43, i32* %2, align 4
  br label %46

44:                                               ; preds = %1
  %45 = load i32, i32* @NGX_ERROR, align 4
  store i32 %45, i32* %2, align 4
  br label %46

46:                                               ; preds = %44, %42, %39, %36, %29, %26, %24, %21, %18, %11
  %47 = load i32, i32* %2, align 4
  ret i32 %47
}

declare dso_local i32 @ngx_http_tfs_parse_action_message(%struct.TYPE_11__*) #1

declare dso_local i32 @ngx_http_tfs_parse_read_meta_message(%struct.TYPE_11__*) #1

declare dso_local i32 @ngx_http_tfs_parse_ls_message(%struct.TYPE_11__*) #1

declare dso_local i32 @ngx_http_tfs_parse_write_meta_message(%struct.TYPE_11__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
